# aita-v4

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  redeploy-aita-v4.sh
.github/workflows/: deploy.yml
src/aita/: __init__.py  command_safety.py  configuration.py  docker_env.py  graph.py  its_nodes.py  logger.py  retriever_nodes.py  state.py  tools.py  utils.py
src/aita/prompts/: __init__.py  loader.py
src/aita/prompts/archived/: cli_trace_summarizer_system_prompt.md  context_gate_system_prompt_0.md  context_gate_system_prompt_1.md  dialogue_cringe.md  evaluator_system_prompt_0.md  probe_planner_system_prompt_0.md  response_generator_system_prompt.md  response_generator_system_prompt_0.md
src/aita/prompts/catalog/: cli_agent_system_prompt.md  cli_trace_summarizer_system_prompt.md  context_gate_system_prompt.md  diagnoser_system_prompt.md  dialogue.md  dialogue_generator.md  evaluator_system_prompt.md  message_summarizer_system_prompt.md  planner_system_prompt.md  probe_planner_system_prompt.md  response_generator_system_prompt.md  sandbox_environment_context.md  student_environment_context.md  trace_summarizer_system_prompt.md  tutoring_gaurdrails.md  tutoring_philosophy.md
src/aita/prompts/catalog/contexts/: sandbox_environment_context.md
src/aita/prompts/catalog/guidelines/: tutoring_gaurdrails.md  tutoring_philosophy.md
src/aita/prompts/catalog/sys_prompts/: cli_agent_system_prompt.md  diagnoser_system_prompt.md  dialogue_generator_system_prompt.md  message_summarizer_system_prompt.md  (+1 more)
src/aita/sandbox_img/: Dockerfile
src/api/: api.py
